Updated CSS variables. Finally fixed the pesky issue with the socialNav not being visible. Turns out the padding was the wrong variable to change for space between icons. Margin should be used going forward. The padding was so large that the icons were being thrown off screen.

--- a/Assets/CSS/contact.css
+++ b/Assets/CSS/contact.css
@@ -28,7 +28,7 @@ main {
 .hours {
     padding: 1rem;
     background: var(--bgFour);
-    width: 75%;
+    width: 100%;
 }
 
 .hoursHead {
@@ -50,7 +50,7 @@ main {
     color: var(--txtThree);
     padding: 1rem;
     text-align: center;
-    width: 75%;
+    width: 100%;
 }
 
 .contactInfo h2 {
@@ -65,23 +65,24 @@ main {
 .contactMap {
     padding: 1rem;
     background: var(--bgFour);
-    width: 75%;
+    width: 100%;
 }
 
 .contactForm {
     padding: 1rem;
     background: var(--bgFour);
-    width: 75%;
+    width: 100%;
 }
 
 .contactForm h2 {
     margin-bottom: 1rem;
     color: var(--txtThree);
+    text-align: center;
 }
 
 .contactFormText,
 .contactFormTextArea {
-    width: 75%;
+    width: 100%;
     color: var(--txtFour);
     outline: none;
     border: 0.1rem solid var(--bgOne);
@@ -89,10 +90,12 @@ main {
     background: var(--bgOne);
     margin-bottom: 1rem;
     padding: 1rem;
+    text-align: center;
 }
 
 .contactFormBtn {
-    width: 75%;
+    width: 100%;
+    height: 2rem;
     border: 0.1rem solid var(--bgOne);
     border-radius: 0.4rem;
     text-decoration: none;
@@ -100,6 +103,7 @@ main {
     color: var(--txtFour);
     background-color: var(--bgOne);
     transition: var(--transition-speed);
+    text-align: center;
 }
 
 .contactFormBtn:hover {
@@ -119,7 +123,7 @@ main {
 
     .contactFormText,
     .contactFormTextArea {
-        width: 75%; /* Adjust as needed for portrait mode */
+        width: 75%;
     }
 }
 
@@ -131,6 +135,5 @@ main {
 
     .contactFormText,
     .contactFormTextArea {
-        width: 75%; /* Adjust as needed for landscape mode */
-    }
+        width: 75%;
 }
